# interpreter

./: README.md  interpreter.cabal
src/: Evaluator.hs  Interpreter.hs  Main.hs  Parser.hs  Tokenizer.hs
tests/: Tests.hs
